[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/potionWeapon.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.51959, 5.93333 )

[node name="potionWeapon" type="Node2D"]
script = ExtResource( 2 )
weaponCooldown = 1.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 40, 40 )
shape = SubResource( 1 )

[node name="shootCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="shootCooldown" to="." method="_on_shootCooldown_timeout"]
